Pointer-events change to terminalArea to fix links not being clickable if .terminalArea covers buttons

--- a/portfolio/src/pages/home.css
+++ b/portfolio/src/pages/home.css
@@ -23,6 +23,11 @@
   left: 80px;
   z-index: 1000;
   width: fit-content;
+  pointer-events: none;
+}
+
+.terminalArea .terminalContainer {
+  pointer-events: auto;
 }
 
 .mainViewerArea {
